authentication with check boxes working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,25 @@
 </head>
 <body>
 
-<%= yield %>
+
+   <div class='login'>
+       <% if current_user %>
+         <%= current_user.email %>
+         <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+       <% else %>
+         <%= link_to "Sign In", new_user_session_path %>
+         <%= link_to "Register", new_user_registration_path %>
+       <% end %>
+     </div>
+     <br><%= link_to "Show all songs", songs_path %><br>
+
+   
+    
+     <br><%= link_to "Home", root_path %><br>
+     <p class="notice"><%= notice %></p>
+     <p class="alert"><%= alert %></p>
+
+<section><%= yield %></section>
 
 </body>
 </html>
