--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -9,6 +9,6 @@
   <strong>Title:</strong>
   <%= @song.title %>
 </p>
-
+<%= render @comments %>
 <%= link_to 'Edit', edit_song_path(@song) %> |
 <%= link_to 'Back', songs_path %>
