Wednesday morning with Alex

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
          <%= link_to "Register", new_user_registration_path %>
        <% end %>
      </div>
-     <br><%= link_to "Show all songs", songs_path %><br>
+     <br><%= link_to "Songs", songs_path %><br>
+     <br><%= link_to "Artists", songs_path %><br>
 
    
     
