--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,6 @@
-<h1>Music app</h1>
+ <h1>Music app</h1>
+
+ <%= comment.title %></br>
+ <%= comment.comment %><br>
+ <%= comment.user.name %><br>
+ <%= comment.user.created_at %><br>
