--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,42 @@
 
   <body>
     <header>
-      <nav>
-        <%= link_to "Songs", songs_path %>
-        <%= link_to "Artists", songs_path %>
-        <%= link_to "Home", root_path %>
-        <% if current_user %>
-          <%= current_user.email %>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-        <% else %>
-          <%= link_to "Sign In", new_user_session_path %>
-          <%= link_to "Register", new_user_registration_path %>
-        <% end %>
+      <nav class="top-bar" data-topbar role="navigation">
+        <ul class="title-area">
+          <li class="name">
+            <h1><%= link_to "Musicapp", root_path %></h1>
+          </li>
+           <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+          <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+        </ul>
+
+        <section class="top-bar-section">
+          <!-- Right Nav Section -->
+          <ul class="right">
+            <!-- <li class="active"><a href="#">Right Button Active</a></li>
+            <li class="has-dropdown">
+              <a href="#">Right Button Dropdown</a>
+              <ul class="dropdown">
+                <li><a href="#">First link in dropdown</a></li>
+                <li class="active"><a href="#">Active link in dropdown</a></li>
+              </ul>
+            </li> -->
+            <li><%= link_to "Songs", songs_path %></li>
+            <li><%= link_to "Artists", songs_path %></li>
+            <% if current_user %>
+              <li><%= current_user.email %></li>
+              <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to "Sign In", new_user_session_path %></li>
+              <li><%= link_to "Register", new_user_registration_path %></li>
+            <% end %>
+          </ul>
+
+          <!-- Left Nav Section -->
+<!--           <ul class="left">
+            <li></li>
+          </ul> -->
+        </section>
       </nav>
     </header>
 
@@ -37,7 +62,7 @@
     <footer>
       <nav></nav>
     </footer> 
-    
+
     <%= javascript_include_tag "application" %>
   </body>
 </html>
