--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,4 @@
- <h1>Music app</h1>
+<h1>Music app</h1>
 
- <%= comment.title %></br>
- <%= comment.comment %><br>
- <%= comment.user.name %><br>
- <%= comment.user.created_at %><br>
+<h1>10 Most Recent Comments</h1>
+<%= render @comments %>
