--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :role, "Fan" %>   
   </div>
 
+  <div class="field">
+      <%= f.label :user_image %><br />
+      <%= f.file_field :user_image %>
+  </div>
 
   <div class="field">
     <%= f.label :password %>
