--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,17 @@
 <h1>Users</h1>
 
-<ul>
+<!-- <ul>
   <%= render @users %>
-</ul>
+</ul -->
+
+
+<% @users.each do |user| %>
+  <tr>
+    <td><%= user.try :name %></td>
+     <%= image_tag user.user_image.url, width: 90%>
+
+    <td><%= link_to 'Show', user %></td>
+   <td><%= link_to 'Edit', edit_user_registration_path(user) %></td>
+    <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td><br>
+  </tr>
+<% end %>
