--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
               </ul>
             </li> -->
             <li><%= link_to "Songs", songs_path %></li>
+            <li><%= link_to "All Users", users_path %></li>
             <li><%= link_to "Artists", users_path %></li>
             <li><%= link_to "Fans", users_path %></li>
             <% if current_user %>
