--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
+  <div class="field">
+      <%= f.label :song_file %><br />
+      <%= f.file_field :song_file %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
