--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -14,6 +14,8 @@
       <tr>
         <td><%= song.user.try :name %></td>
         <td><%= song.title %></td>
+
+        <audio controls="controls" source src="<%= song.song_file.url %>" >       </audio>
         <td><%= link_to 'Show', song %></td>
         <td><%= link_to 'Edit', edit_song_path(song) %></td>
         <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
