--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,8 @@
 <li>
   <ul>
-    <li><%= user.name %></li>
-    <li><%= user.role %></li>
     <li><%= user.profile_picture %></li>
+    <li><%= link_to user.name, user_path(user) %></li>
+    <li><%= user.role %></li>
     <li><%= user.profile_description %></li>
   </ul>
 </li>
