add styling and update navigation bar with a page for artist and a page for fans

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Music app</h1>
 
-<h1>10 Most Recent Comments</h1>
-<%= render @comments %>
+
+<section><h1>Hello! Welcome to Music App </h1></section>
+
