--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,11 +16,71 @@
 
  */
  
-table {
- width: 100%;
+ table {
+   width: 100%;
+   margin: 0 auto;
+ }
+
+ body {
+  margin: 0 auto;
+  background: url("tri.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #333;
+  font-family: 'Didact Gothic', sans-serif;
 }
 
-body {
-  max-width: 960px;
+header {
+  width: 100%; 
+  background: #333;
+}
+
+main, header nav {
+  max-width: 600px;
   margin: 0 auto;
 }
+
+.logo {
+  width: 30px;
+  height: 30px;
+  border: 2px solid #FF6699;
+  -moz-border-radius: 10px 0;
+  -webkit-border-radius: 10px 0;
+  border-radius: 10px 0;
+  display: inline-block;
+  margin: 6px 0;
+}
+
+main {
+  background:rgba(204, 204, 204,0.5);
+  width: 600px;
+  margin: 0 auto;
+  /*color: #C21F1F;*/
+  padding: 20px;
+}
+
+audio {
+  width: 100%;
+}
+
+.user_name {
+  color: white;
+}
+
+/*section {
+  background:rgba(204, 204, 204,0.3);
+  width:600px;
+  margin:0 auto;
+  color:#C21F1F;
+}   */    
+
+img {
+  border: 2px solid #FF6699;
+  -moz-border-radius: 10px 0;
+  -webkit-border-radius: 10px 0;
+  border-radius: 10px 0;
+  margin: 0 0 10px;
+}
+
