--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -28,14 +28,19 @@
   </div>
 
   <div class="field">
-      <%= f.label :user_image %><br />
-      <%= f.file_field :user_image %>
+    <%= f.label :user_image %><br />
+    <%= f.file_field :user_image %>
   </div>
-  <%= f.label :remote_user_image_url %>
-  <%= f.text_field :remote_user_image_url %>
+  
+  <div class="field">
+    <%= f.label :remote_user_image_url %>
+    <%= f.text_field :remote_user_image_url %>
+  </div> 
+
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Update", class: "button expand" %>
   </div>
+  
 <% end %>
 
 <h3>Cancel my account</h3>
