--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -14,16 +14,16 @@
       <tr>
         <td><%= song.user.try :name %></td>
         <td><%= song.title %></td>
-
-        <audio controls="controls" source src="<%= song.song_file.url %>" >       </audio>
         <td><%= link_to 'Show', song %></td>
         <td><%= link_to 'Edit', edit_song_path(song) %></td>
-        <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', song_path(song), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
+<% if current_user && current_user.role == "artist" %>
 
 <%= link_to 'New Song', new_song_path %>
+<% end %>
