--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
           
             <% if current_user %>
               <li class='user_name'><%= current_user.name %></li>
-              <li><%= link_to "edit", edit_user_registration_path %></li>
+              <li><%#= link_to "edit", edit_user_registration_path %></li>
               <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
             <% else %>
               <li><%= link_to "Sign In", new_user_session_path %></li>
