--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,3 +18,4 @@
       <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
     <% end %>
+  </table>
