--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,2 @@
-
-
-<section><h1>Welcome to Musika! </h1></section>
-
+<h1>Welcome to Musika...</h1>
+<p>A music self publishing website for great artist and music lovers...</p>
