--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -15,8 +15,8 @@
         <td><%= song.user.try :name %></td>
         <td><%= song.title %></td>
         <td><%= link_to 'Show', song %></td>
-        <td><%= link_to 'Edit', edit_song_path(song) %></td>
-        <td><%= link_to 'Destroy', song_path(song), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%#= link_to 'Edit', edit_song_path(song) %></td>
+        <td><%#= link_to 'Destroy', song_path(song), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
