--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,8 +14,8 @@
     <td><%= link_to user.name, user_path(user) %></td>
     <td><%= image_tag user.user_image.url, width: 90 %>
       <td><%= link_to 'Show', user %></td>
-      <td><%= link_to 'Edit', edit_user_registration_path(user) %></td>
-      <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%#= link_to 'Edit', edit_user_registration_path(user) %></td>
+      <td><%#= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
     <% end %>
   </table>
